Slide 4: Improve slides

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -486,13 +486,13 @@ ros2 run cpp_pubsub listener
         \end{column}
     \end{columns}
     
-\begin{lstlisting}[style=bash] 
-ros2 run cpp\_pubsub talker
-\end{lstlisting}
+    \begin{lstlisting}[style=bash] 
+ros2 run cpp_pubsub talker
+    \end{lstlisting}
 
-\begin{lstlisting}[style=bash] 
-ros2 run cpp\_pubsub listener
-\end{lstlisting}
+    \begin{lstlisting}[style=bash] 
+ros2 run cpp_pubsub listener
+    \end{lstlisting}
 \end{frame}
 
 
