--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -700,13 +700,13 @@ ros2 run tf2_ros tf2_echo [reference_frame] [target_frame]
 \begin{columns}
 \begin{column}{0.4\textwidth}
 \begin{itemize}
-\item La descripción del robot (URDF) está guardada en un servidor de parámetros como /robot\_description
-\item Se puede visualizar el robot en RViz con el plugin RobotModel
+\item La descripción del robot (URDF) está guardada en un servidor de parámetros como \lstinline[style=bash]{/robot_description}
+\item Se puede visualizar el robot en RViz con el plugin \lstinline[style=bash]{RobotModel}
 \end{itemize}
 \end{column}
 \begin{column}{0.6\textwidth}
 
-control.launch
+\lstinline[style=bash]{control.launch}
 \begin{lstlisting}[style=xml,basicstyle=\tiny]
 ...
 <include file="$(find smb_description)/launch/load.launch">
@@ -721,7 +721,7 @@ value="$(arg robot_namespace)"/>
 ...
 \end{lstlisting}
 
-load.launch
+\lstinline[style=bash]{load.launch}
 \begin{lstlisting}[style=xml,basicstyle=\tiny]
 ...
 <param name="$(arg description_name)" command="$(find xacro)/xacro
