--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -33,7 +33,7 @@ El objetivo del trabajo práctico es la realización de los pasos básicos para 
 \end{itemize}
 
 \section{Datos}
-Para trabajar se utilizarán los datos provistos por la cátedra. Caso contrario puede hacer uso del dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}. Debera convertir la secuencia de calibración a formato ROS2. El resto de las secuencias ya se encuentra en formato ROS2 y pueden ser descargadas de \url{https://docs.openvins.com/gs-datasets.html}
+Para trabajar se utilizarán los datos provistos por la cátedra. Caso contrario puede hacer uso del dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}. Debera convertir la secuencia de calibración a formato ROS2. El resto de las secuencias ya se encuentran en formato ROS2 y pueden ser descargadas de \url{https://docs.openvins.com/gs-datasets.html}
 
 \section{Calibración}
 Antes de comenzar a trabajar con un dataset se debe realizar una calibración de los sensores. En este trabajo solo deben calibrar una cámara estéreo.
