Slide 5: Add tangential distortion iamges

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -709,7 +709,7 @@
 \fi
 
 \begin{frame}
-	\frametitle{Distorción}
+	\frametitle{Distorción Radial}
 	
 	\footnotesize
 	
@@ -737,6 +737,24 @@
 		}
 	\end{figure}
 	
+\end{frame}
+
+\begin{frame}
+    \frametitle{Distorción Tangencial}
+    
+    \footnotesize
+    
+    \begin{figure}[!h]
+        \subfloat[]
+        {
+            \includegraphics[width=0.3\columnwidth]{images/camera/tangential_distortion2.pdf}
+        }\\
+        \subfloat[]
+        {
+            \includegraphics[width=0.3\columnwidth]{images/camera/tangential_distortion.pdf}
+        }
+    \end{figure}
+    
 \end{frame}
 
 
