Slide 5: Add tangential distortion iamges

--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -83,6 +83,9 @@
 \begin{frame}
     \frametitle{Magnetómetro}
 
+    \note{Pioneer 10 es una sonda espacial estadounidense lanzada el 2 de marzo de 1972 siendo la primera sonda espacial en explorar el sistema solar exterior y la heliosfera. Además fue la primera sonda que atravesó con éxito el cinturón de asteroides y que llegó hasta el planeta Júpiter, el objetivo principal de su misión.
+    El paso por Júpiter el 3 de diciembre de 1973 proporcionó las mejores imágenes hasta la fecha de la atmósfera del planeta, permitiendo obtener información de la temperatura de la atmósfera y de la altura en la que se encuentran las nubes superiores de Júpiter. También estudió los cinturones de radiación del planeta y su fuerte campo magnético, de intensidad muy superior a la que se esperaba.}
+
     \begin{center}
         \includegraphics[width=0.5\columnwidth]{pioneer_10.jpg}
     \end{center}
