--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -177,6 +177,8 @@
         Mide la aceleración midiendo el cambio en la capacitancia. Tiene una masa unida a un resorte que se limita a moverse en una dirección y placas exteriores fijas. Entonces, cuando se aplica una aceleración, la masa se mueve y la capacitancia entre las placas y la masa cambiará. Este cambio de capacitancia es medido, y se corresponde a un valor de aceleración particular.
     \end{block}
     
+    \note{La capacitancia es la capacidad de un componente o circuito para recoger y almacenar energía en forma de carga eléctrica.}
+    
     \begin{itemize}
         \item Introceptivo
         \item Pasivo
