Slide 5: Remove rqt_bag slide

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -767,15 +767,6 @@ publish_tf:=$(arg publish_tf)"/>
     
 \end{frame}
 
-
-\begin{frame}
-    \frametitle{rqt\_bag}
-    
-    \TODO{rqt\_bag todavía no fue portado a ROS 2}
-
-    
-\end{frame}
-
 \begin{frame}
     \frametitle{Estrategias de Debugging}
     
@@ -802,6 +793,7 @@ publish_tf:=$(arg publish_tf)"/>
 		\item Ver cómo crear servicios
 		\item Ver cómo crear mensajes
 		\item Uso de parámetros en un nodo
+        \item \lstinline[style=bash]{rqt_bag}
 		\item \lstinline[style=bash]{rqt_logger_level}
 		\item \lstinline[style=bash]{rqt_console}
 		\item \lstinline[style=bash]{rqt_graph}
