Slide 2: add some notes

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -434,6 +434,8 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
         }
     \end{figure}
     
+    \note{More information in: https://dominicplein.medium.com/extrinsic-intrinsic-rotation-do-i-multiply-from-right-or-left-357c38c1abfd}
+    
 \end{frame}
 
 
